tests/ui/safety-constraint-attribute/no-struct-error/expected
error: Cannot derive `Invariant` for `MyEnum`
   |
| #[derive(kani::Invariant)]
   |          ^^^^^^^^^^^^^^^
   |
note: `#[safety_constraint(...)]` can only be used in structs